--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -13,18 +13,15 @@
     flex-direction: row;
     height: 100vh;
     width: 80%;
-    margin: 50px auto;
-    border: #000 solid 1px;
+    margin: 15vh auto;
 }
 
-.container__content>div{
-    border: solid #000 1px;
-}
 .container__content_main{
     width: 60%;
-    border: solid #000 1px;
+    margin: 3px;
 }
 .container__content_rigth{
     width: 20%;
-    border: solid #000 1px;
+    margin: 3px;
+    background-color: #151426;
 }
