--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,12 @@
 <section class="container__main">
-   
+
     <section class="container__content">
-        <!-- <section class="container__content_main"></section>
-    <section class="container__content_rigth"></section>
-    <section class="container__content_rigth"></section> -->
+        <section class="container__content_main">
+            <app-contents></app-contents>
+            <!-- <app-small-card-rigth></app-small-card-rigth>
+            <app-small-card-rigth></app-small-card-rigth> -->
+        </section>
+        <!-- <section class="container__content_rigth"></section>
+        <section class="container__content_rigth"></section> -->
     </section>
 </section>
