atualização de textos exemplares

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -29,7 +29,7 @@
                             width="32" height="32" />
                     </svg></li>
                 <li>Serviços</li>
-                <li>Sobre a aplicação</li>
+                <li>Sobre o blog</li>
                 <li>Nossa missão</li>
             </ul>
             <ul>
