--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,10 +3,10 @@
     <section class="container__content">
         <section class="container__content_main">
             <app-contents></app-contents>
-            <!-- <app-small-card-rigth></app-small-card-rigth>
-            <app-small-card-rigth></app-small-card-rigth> -->
+            <app-small-card-rigth></app-small-card-rigth>
+            <app-small-card-rigth></app-small-card-rigth>
         </section>
-        <!-- <section class="container__content_rigth"></section>
-        <section class="container__content_rigth"></section> -->
+        <section class="container__content_rigth"></section>
+        <section class="container__content_rigth"></section>
     </section>
 </section>
