--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,6 @@
 }
 .container__main{
     margin: 0px auto 0px auto;
-    width: 100%;
     height: 900px;
     padding: 15px;
 }
@@ -21,7 +20,15 @@
     margin: 3px;
 }
 .container__content_rigth{
-    width: 20%;
+    width: 40%;
     margin: 3px;
     background-color: #151426;
+}
+.small-card-rigth{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+    
 }
