finalização do card-left

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,8 @@
             </section>
         </section>
         <section class="container__content_rigth">
-            
+            <app-card-left></app-card-left>
+            <app-card-left></app-card-left>
         </section>
     </section>
 </section>
