deixando o blog dinamico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-menu></app-menu>
+<app-menu 
+urlGitHub="https://github.com/EdimilsonBorges/" 
+urlLinkedin="https://www.linkedin.com/in/edimilson-borges-bb8b5423b/" 
+urlInstagran="https://www.instagram.com/edimilson_borgess/"
+></app-menu>
 <app-home></app-home>
 <router-outlet></router-outlet>
