--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -10,24 +10,26 @@
 .container__content{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
     height: 100vh;
-    width: 80%;
-    margin: 15vh auto;
+    width: 100%;
+    margin: 100px auto;
 }
 
 .container__content_main{
-    width: 70%;
-    margin: 3px;
+    width: 50%;
+    margin: 0px 35px;
 }
 .container__content_rigth{
-    width: 30%;
+    width: 300px;
     margin: 3px;
 }
-.small-card-rigth{
+.small-card{
     position: relative;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: space-between;
     
 }
