--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
     <nav class="nav__menu">
         <div>
             <ul>
-                <li class="logo"><svg style="background-color: transparent;" width="30px" height="30px" viewBox="0 0 32 32"
+                <li  class="logo" (click)="goToHome()"><svg style="background-color: transparent;" width="30px" height="30px" viewBox="0 0 32 32"
                         id="icon" xmlns="http://www.w3.org/2000/svg">
                         <defs>
                             <style>
@@ -28,9 +28,9 @@
                         <rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-2"
                             width="32" height="32" />
                     </svg></li>
-                <li>Serviços</li>
-                <li>Sobre o blog</li>
-                <li>Nossa missão</li>
+                <li (click)="goToServices()">Serviços</li>
+                <li (click)="goToAbout()">Sobre o blog</li>
+                <li (click)="goToMission()">Nossa missão</li>
             </ul>
             <ul>
                 <a [href]="urlLinkedin" target="_blank"><li><svg fill="#F0F0FC" style="background-color: transparent;" width="30px" version="1.1" id="Layer_1"
@@ -59,7 +59,7 @@
                        c27.3,0,49.5,22.2,49.5,49.5V374.7z" />
                         </g>
                     </svg></li></a>
-                    <li class="themes"><svg xmlns="http://www.w3.org/2000/svg" fill="#151426" style="background-color: transparent;" viewBox="0 -960 960 960" width="30">
+                    <li class="themes" (click)="toggleTheme()"><svg xmlns="http://www.w3.org/2000/svg" fill="#151426" style="background-color: transparent;" viewBox="0 -960 960 960" width="30">
                         <path
                             d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q8 0 17 .5t23 1.5q-36 32-56 79t-20 99q0 90 63 153t153 63q52 0 99-18.5t79-51.5q1 12 1.5 19.5t.5 14.5q0 150-105 255T480-120Z" />
                     </svg></li>
