--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,5 +1,5 @@
 *{
-    background-color: #F0F0FC;
+    background-color: var(--primary);
 }
 .division{
     position: relative;
@@ -8,7 +8,7 @@
     align-items: center;
     height: 5px;
     width: 100%;
-    background-color: #97E2B7;
+    background-color: #39D478;
     margin-bottom: 30px;
     margin-right: 100px;
     border-radius: 0px 100% 0px 0px;
@@ -23,7 +23,7 @@
 header{
     text-transform: capitalize;
     font-weight: bold;
-    color: #151426;
+    color: var(--text-menu);
 }
 p{
     margin: 30px 0px 30px 0px;
