criado a pagina de posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@ urlLinkedin="https://www.linkedin.com/in/edimilson-borges-bb8b5423b/"
 urlInstagran="https://www.instagram.com/edimilson_borgess/"
 ></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
