--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
     <nav class="nav__menu">
         <div>
             <ul>
-                <li  class="logo" (click)="goToHome()"><svg style="background-color: transparent;" width="30px" height="30px" viewBox="0 0 32 32"
+                <li class="logo" (click)="goToHome()"><svg style="background-color: transparent;" width="30px" height="30px" viewBox="0 0 32 32"
                         id="icon" xmlns="http://www.w3.org/2000/svg">
                         <defs>
                             <style>
@@ -28,7 +28,7 @@
                         <rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-2"
                             width="32" height="32" />
                     </svg></li>
-                <li (click)="goToServices()">Serviços</li>
+                <li (click)="goToHome()">Inicio</li>
                 <li (click)="goToAbout()">Sobre o blog</li>
                 <li (click)="goToMission()">Nossa missão</li>
             </ul>
