--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,1 +1,9 @@
-<p>details works!</p>
+<section class="details__main">
+    <section class="details-main__content">
+        <img src={{imgDetail}} alt="">
+        <div class="postBody">
+            <h1>{{titleDetail}}</h1>
+            <p>{{contentDetail}}</p>
+        </div>
+    </section>
+</section>
