--- a/src/app/components/card-rigth/card-rigth.component.css
+++ b/src/app/components/card-rigth/card-rigth.component.css
@@ -1,12 +1,15 @@
 *{
     background-color: var(--primary);
 }
+a{
+    text-decoration: none;
+}
+
 .card-left{
 padding: 2px;
 background-color: var(--body);
 border-radius: 12px 12px 12px 12px;
 margin-bottom: 10px;
-cursor: pointer;
 }
 .card-left img{
 width: 100%;
@@ -20,4 +23,13 @@ border-radius: 10px 10px 0px 0px;
     font-size: 20pt;
     border-radius: 0px 0px 10px 10px;
     text-align: center;
+}
+
+.card-left span{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    background-color: var(--body);
+    font-weight: bold;
+    color: var(--text-body);
 }
