--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,6 @@
 
     <section class="container__content">
         <section class="container__content_main">
-
             <app-contents 
                 nomeBlog="Meu Blog" 
                 msgWelcome="Sejam Bem-vindos ao blog de" 
@@ -18,8 +17,8 @@
             </section>
         </section>
         <section class="container__content_rigth">
-            <app-card-rigth imgCardRigth="https://www.eusemfronteiras.com.br/wp-content/uploads/2019/11/shutterstock_1392193913-810x540.jpg" decriptionCardRigth="t is a long established fact that a reader will be distracted by the readable content of a page"></app-card-rigth>
-            <app-card-rigth imgCardRigth="https://img.freepik.com/fotos-premium/gente-alegre-alegre-divirtiendose-juntos-playa_425263-2848.jpg" decriptionCardRigth="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been"></app-card-rigth>
+            <app-card-rigth id="1" dateCardRigth="28/08/2023" imgCardRigth="https://www.eusemfronteiras.com.br/wp-content/uploads/2019/11/shutterstock_1392193913-810x540.jpg" decriptionCardRigth="Where can I get some?"></app-card-rigth>
+            <app-card-rigth id="2" dateCardRigth="25/08/2023" imgCardRigth="https://img.freepik.com/fotos-premium/gente-alegre-alegre-divirtiendose-juntos-playa_425263-2848.jpg" decriptionCardRigth="Where does it come from?"></app-card-rigth>
         </section>
     </section>
 </section>
