--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <div>
-        <span>Powered by Edimilson Borges</span>
+        <span>{{textDeveloped}}</span>
     </div>
 </footer>
