--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -28,9 +28,9 @@
                         <rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-2"
                             width="32" height="32" />
                     </svg></li>
-                <li (click)="goToHome()">Inicio</li>
-                <li (click)="goToAbout()">Sobre o blog</li>
-                <li (click)="goToMission()">Nossa missão</li>
+                <li class="btn__Menu" (click)="goToHome()">Inicio</li>
+                <li class="btn__Menu" (click)="goToAbout()">Sobre o blog</li>
+                <li class="btn__Menu" (click)="goToMission()">Nossa missão</li>
             </ul>
             <ul>
                 <a [href]="urlLinkedin" target="_blank"><li><svg fill="#F0F0FC" style="background-color: transparent;" width="30px" version="1.1" id="Layer_1"
