--- a/src/app/components/contents/contents.component.css
+++ b/src/app/components/contents/contents.component.css
@@ -1,39 +1,43 @@
-*{
+* {
     background-color: var(--primary);
     margin-bottom: 30px;
 }
-.span-top{
-text-transform: uppercase;
-background-color: #FCFCFC;
-font-weight: bold;
-color: var(--body);
-border-radius: 15px;
-padding: 5px 20px 5px 20px;
-font-size: 10pt;
+
+.span-top {
+    text-transform: uppercase;
+    background-color: #FCFCFC;
+    font-weight: bold;
+    color: var(--body);
+    border-radius: 15px;
+    padding: 5px 20px 5px 20px;
+    font-size: 10pt;
 }
-h1{
+
+h1 {
     font-size: 40pt;
     margin-top: 30px;
     text-transform: capitalize;
     color: var(--text-menu);
 }
-h1 >.span-title{
+
+h1>.span-title {
     border-bottom: solid #97E2B7 10px;
 }
-p{
+
+p {
     color: #6E6E7A;
     font-weight: bold;
 }
 
-a{
+a {
     color: var(--text-menu);
 }
 
-button > svg{
+button>svg {
     margin: 0px 10px 0px 10px;
 }
 
-button{
+button {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -48,6 +52,28 @@ button{
     font-weight: 600;
 }
 
-button:hover{
+button:hover {
     box-shadow: var(--destaque) 0px 0px 10px 0px;
+}
+
+@media screen and (max-width: 900px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h1>.span-title {
+        font-size: 40px;
+    }
+
+}
+
+@media screen and (max-width: 700px) {
+    h1 {
+        font-size: 25px;
+    }
+
+    h1>.span-title {
+        font-size: 25px;
+    }
+
 }
