--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -64,3 +64,14 @@ header{
  .nav__menu > div> ul > .logo:hover > svg, .nav__menu > div> ul > .themes:hover > svg{
     fill: #F0F0FC; 
  }
+
+ @media screen and (max-width: 700px) {
+    .nav__menu > div> ul > .btn__Menu{
+        display: none;
+    }
+
+    .nav__menu > div{
+        justify-content: center;
+    }
+
+  }
