--- a/src/app/pages/details/details.component.css
+++ b/src/app/pages/details/details.component.css
@@ -8,6 +8,20 @@
     align-items: center;
 }
 
+.details__main>a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 5px;
+    margin-top: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+    background-color: var(--body);
+    color: #f0f0f0;
+    border-radius: 10px;
+}
+
 .details-main__content {
     width: 90%;
     display: flex;
@@ -15,27 +29,46 @@
     justify-content: center;
 }
 
-.postBody{
+.postBody {
     width: 500px;
     margin-top: 30px;
 }
 
-.postBody > h1 {
+.postBody span {
+    margin-left: 10px;
+    color: var(--text-menu);
+}
+
+.postBody>h1 {
     margin: 10px;
     font-size: 30px;
     color: var(--text-menu);
 }
 
-.postBody > p {
+.postBody>p {
     margin: 10px;
     text-align: justify;
     color: var(--text-menu);
 }
 
-.details-main__content > img {
+.details-main__content>img {
     width: 550px;
     height: 350px;
     margin-top: 40px;
-    margin-right:30px;
+    margin-right: 30px;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    .details-main__content>img {
+        width: 350px;
+        height: 250px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .details-main__content>img {
+        width: 150px;
+        height: 100px;
+    }
 }
