--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,7 +1,9 @@
 <section class="details__main">
+    <a [routerLink]="['']"> <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"><path fill="#f0f0f0" d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Voltar</a>
     <section class="details-main__content">
         <img src={{imgDetail}} alt="">
         <div class="postBody">
+            <span>{{dateDetail}}</span>
             <h1>{{titleDetail}}</h1>
             <p>{{contentDetail}}</p>
         </div>
