--- a/src/app/pages/details/details.component.css
+++ b/src/app/pages/details/details.component.css
@@ -15,60 +15,10 @@
     position: relative;
     top: 5px;
     margin-top: 15px;
+    margin-bottom: 20px;
     padding-right: 15px;
     text-decoration: none;
     background-color: var(--body);
     color: #f0f0f0;
     border-radius: 10px;
-}
-
-.details-main__content {
-    width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.postBody {
-    width: 500px;
-    margin-top: 30px;
-}
-
-.postBody span {
-    margin-left: 10px;
-    color: var(--text-menu);
-}
-
-.postBody>h1 {
-    margin: 10px;
-    font-size: 30px;
-    color: var(--text-menu);
-}
-
-.postBody>p {
-    margin: 10px;
-    text-align: justify;
-    color: var(--text-menu);
-}
-
-.details-main__content>img {
-    width: 550px;
-    height: 350px;
-    margin-top: 40px;
-    margin-right: 30px;
-    border-radius: 10px;
-}
-
-@media screen and (max-width: 800px) {
-    .details-main__content>img {
-        width: 350px;
-        height: 250px;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .details-main__content>img {
-        width: 150px;
-        height: 100px;
-    }
 }
