correção route post

--- a/src/app/components/card-rigth/card-rigth.component.html
+++ b/src/app/components/card-rigth/card-rigth.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['details', id]">
+<a [routerLink]="['post', id]">
     <div class="card-left">
         <img [src]="imgCardRigth" alt="">
         <span>{{dateCardRigth}}</span>
